// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button check renders button unchanged: button 1`] = `
<div>
  <button
    class="rounded-md px-4 py-2 flex items-center justify-center bg-[--color-primary] text-white shadow-sm undefined w-full"
    type="button"
  >
    Button
  </button>
</div>
`;

exports[`Button check renders button unchanged: link-button 1`] = `
<div>
  <button
    class="rounded-md px-4 py-2 flex items-center justify-center bg-[--color-primary] text-white shadow-sm undefined w-full"
    type="button"
    url="www.google.com"
  >
    <a
      class="flex flex-row gap-1"
      href="www.google.com"
    >
      <span>
        Button
      </span>
    </a>
  </button>
</div>
`;
